syntax = "proto3";
package todo;

enum Status {
    TODO = 0;
    DONE = 1;
}

message TodoItem {
    uint64 id = 1;
    string text = 2;
    Status status = 3;
}

message AllTodoRequest {
}

message AllTodoReply {
    repeated TodoItem items = 1;
}

message FindTodoRequest {
    uint64 id = 1;
}

message FindTodoReply {
    TodoItem todo = 1;
}

message CreateTodoRequest {
    string text = 1;
}

message CreateTodoReply {
    TodoItem todo = 1;
}

message DeleteTodoRequest {
    uint64 id = 1;
}

message DeleteTodoReply {
}

service TodoService {
    rpc All(AllTodoRequest) returns (AllTodoReply);
    rpc Find(FindTodoRequest) returns (FindTodoReply);
    rpc Create(CreateTodoRequest) returns (CreateTodoReply);
    rpc Delete(DeleteTodoRequest) returns (DeleteTodoReply);
}
